# physics_engine

./: .impulse_notes.swp  CMakeLists.txt  README.md  impulse_notes  kinematics.cpp  main.cpp  point.h  pooling  rigidbody.h  shapes.h  sim  vec_math  vectors.cpp  vectors.h  world.h
misc/: abs  abstract.cpp  centroid_example.cpp  contain.h  impulse_notes  shapes.h  threadp.cpp
src/: CMakeLists.txt  kinematics.cpp  main.cpp  point.h  polygon.cpp  polygon.h  projectile.cpp  projectile.h  rigidbody.h  vectors.cpp  vectors.h
src/old_phys/: rigidbody.h
test/: CMakeLists.txt  test_phys.cpp
